@@ -173,10 +173,6 @@ DECLARE_FAT_FUNC(_nettle_umac_nh_n, umac_nh_n_func)
 DECLARE_FAT_FUNC_VAR(umac_nh_n, umac_nh_n_func, c);
 DECLARE_FAT_FUNC_VAR(umac_nh_n, umac_nh_n_func, neon);
 
-DECLARE_FAT_FUNC(_nettle_chacha_core, chacha_core_func)
-DECLARE_FAT_FUNC_VAR(chacha_core, chacha_core_func, c);
-DECLARE_FAT_FUNC_VAR(chacha_core, chacha_core_func, neon);
-
 DECLARE_FAT_FUNC(nettle_chacha_crypt, chacha_crypt_func)
 DECLARE_FAT_FUNC_VAR(chacha_crypt, chacha_crypt_func, 1core)
 DECLARE_FAT_FUNC_VAR(chacha_crypt, chacha_crypt_func, 3core)
@@ -226,7 +222,6 @@ fat_init (void)
       nettle_sha3_permute_vec = _nettle_sha3_permute_neon;
       _nettle_umac_nh_vec = _nettle_umac_nh_neon;
       _nettle_umac_nh_n_vec = _nettle_umac_nh_n_neon;
-      _nettle_chacha_core_vec = _nettle_chacha_core_neon;
       nettle_chacha_crypt_vec = _nettle_chacha_crypt_3core;
       nettle_chacha_crypt32_vec = _nettle_chacha_crypt32_3core;
     }
@@ -239,7 +234,6 @@ fat_init (void)
       nettle_sha3_permute_vec = _nettle_sha3_permute_c;
       _nettle_umac_nh_vec = _nettle_umac_nh_c;
       _nettle_umac_nh_n_vec = _nettle_umac_nh_n_c;
-      _nettle_chacha_core_vec = _nettle_chacha_core_c;
       nettle_chacha_crypt_vec = _nettle_chacha_crypt_1core;
       nettle_chacha_crypt32_vec = _nettle_chacha_crypt32_1core;
     }
@@ -288,10 +282,6 @@ DEFINE_FAT_FUNC(_nettle_umac_nh_n, void,
 		(uint64_t *out, unsigned n, const uint32_t *key,
 		 unsigned length, const uint8_t *msg),
 		(out, n, key, length, msg))
-
-DEFINE_FAT_FUNC(_nettle_chacha_core, void,
-		(uint32_t *dst, const uint32_t *src, unsigned rounds),
-		(dst, src, rounds))
 
 DEFINE_FAT_FUNC(nettle_chacha_crypt, void,
 		(struct chacha_ctx *ctx,
